# snap-sorter

./: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml
.github/workflows/: ci.yml
clusterer/: datapoint_clusterer.py  exception.py  facenet_test_nb.ipynb  inference.py  model.py  pipeline.py  pipeline_test.ipynb  pre_train_clustering.ipynb  sample_training.ipynb  triplet_dataset.py
clusterer/milvus_run/: docker compose.yml  pyproject.toml  test.ipynb
clusterer/tests/: pre_train_tests.py
docs/: docusaurus.config.js  pnpm-lock.yaml
docs/snap sorter docs/: package.json  pnpm-lock.yaml
frontend/: .dockerignore  .env.example  .eslintrc.json  .prettierrc.cjs  .prettierrc.json  README.md  dev.Dockerfile  next.config.js  package.json  pnpm-lock.yaml  prod.Dockerfile  tailwind.config.js
frontend/components/: Footer.tsx  ImageWithModal.tsx  Navbar.tsx
frontend/pages/: _app.tsx  _document.tsx  announcements.tsx  index.tsx
frontend/prisma/: schema.prisma
frontend/src/: app.d.ts  hooks.server.ts
frontend/types/: next-auth.d.ts
next-app/: .env.example  .prettierignore  .prettierrc.json  dev.Dockerfile  package.json  pnpm-lock.yaml  prod.Dockerfile  tailwind.config.js
next-app/components/: Footer.tsx  Navbar.tsx
next-app/pages/: _app.tsx  announcements.tsx  index.tsx
next-app/types/: next-auth.d.ts
scripts/: init_auth_tables.sql
server/: .gitignore  crud.py  database.py  main.py  models.py  pyproject.toml  schemas.py  snap_sorter.db
src/clusterer/: datapoint_clusterer.py  embedding.py  inference.py  (+2 more)
(+69 files in other folders)
