[tool.poetry]
name = "server"
version = "0.1.0"
description = "Python server for CRUx Snap Sorter"
authors = ["majimearun <arunachala0619@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.95.2"}
black = "^23.3.0"
python-multipart = "^0.0.6"
sqlalchemy = "^2.0.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
